2007-10-18  Carlos O'Donell  <carlos@systemhalted.org>

	* config/tc-hppa.c (pa_ip): Fix comment typo.
	(pa_comm): Likewise.

2007-10-18  Nick Clifton  <nickc@redhat.com>

	PR gas/5172
	* config/tc-arc.c (md_estimate_size_before_relax): Change error
	message.
	(md_convert_frag): Just call abort.
	* config/tc-i860.c (md_estimate_size_before_relax): Change error
	message.
	* config/tc-i860.h (md_convert_frag): Just call abort.
	* config/tc-ip2k.c (md_estimate_size_before_relax): Change error
	message.
	(md_convert_frag): Just call abort.
	* config/tc-m68k.c (m68k_ip): Do not attempt translation of
	architecture names.
	PR gas/5174
	* config/tc-arm.c: Fix formatting and spelling errors.
	PR gas/5175
	* config/tc-xc16x.c: Fix formatting and internationalization.
	* po/gas.pot: Regenerate.

2007-10-17  Nick Clifton  <nickc@redhat.com>

	PR gas/5173
	* as.h (ieee_md_atof, vax_md_atof): New prototypes.
	* read.c (s_float_space): Allow a zero length return from md_atof
	if the error message has been set.
	(float_cons): Likewise.
	* config/atof-ieee.c (ieee_md_atof): New function.  Performs the
	md_atof() function in a generic way for IEEE using targets.
	* config/atof-vax.c (md_atof): Rename to vax_md_atof.  Use the
	same error message as ieee_md_atof.
	* tc-alpha.c (md_atof): Use ieee_md_atof.  Remove #define of vax_md_atof.
	* tc-arc.c (md_atof): Use ieee_md_atof.
	* tc-arm.c (md_atof): Use sizeof (LITTLENUM_TYPE) instead of the
	constant 2.  Use a precision of 5 for the 'x' and 'p' types.
	* tc-avr.c (md_atof): Use ieee_md_atof.
	* tc-bfin.c (md_atof): Use ieee_md_atof.
	* tc-cr16.c (md_atof): Use ieee_md_atof.
	* tc-crx.c (md_atof): Use ieee_md_atof.
	* tc-d10v.c (md_atof): Use ieee_md_atof.
	* tc-d30v.c (md_atof): Use ieee_md_atof.
	* tc-dlx.c (md_atof): Use ieee_md_atof.
	* tc-fr30.c (md_atof): Use ieee_md_atof.
	* tc-frv.c (md_atof): Use ieee_md_atof.
	* tc-h8300.c (md_atof): Use ieee_md_atof.
	* tc-hppa.c (md_atof): Use ieee_md_atof.